# mcp-server-note

./: .env  README.md  chat_history.db  chat_history.db-shm  chat_history.db-wal  client.py  create_note.py  pyproject.toml  requirements.txt  saida.txt
mcp_simple_tool/: server.py
mcp_simple_tool/llm/: __init__.py  openrouter_client.py  orchestrator.py  prompts.py
mcp_simple_tool/tools/: notes.py
mcp_simple_tool/webapp/: __init__.py  app.py  storage.py
mcp_simple_tool/webapp/static/: index.html
tests/: conftest.py  test_error_mapping.py  test_notes_cache_and_tags.py  test_openrouter_client.py  test_web_chat_api.py  test_web_chat_security_persistence.py
